...
        android:id="@+id/achievementsFragment"
        android:enabled="true"
        android:icon="@drawable/trofeo_removebg_preview"
        android:title="@string/achievementsFragment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/listFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/listFragment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/historyFragment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="Perfil"
        app:showAsAction="ifRoom"/>


</menu>
